--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+   
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro e Aniversário</title>
     <link rel="stylesheet" href="style.css">
-    
-</head>
+    <link  rel="shortcut icon"  href="./467182596_958994359456029_7504789379305393758_n-removebg-preview.png" wtype="image " >
+ </head>
 <body>
     <div class="img">
         <img src="./467182596_958994359456029_7504789379305393758_n-removebg-preview.png" alt="">
